# kartof-chat

./: README.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/utils/: data_processing.rs  http.rs  mod.rs  tcp.rs
